# smiles_generation

./: Home.py  README.md  bulk_smiles_generation.ipynb  dashboard.py  helpers.py  reaction_engine.py  requirements.txt  smarts_reaction_database.csv  smiles_generation_scale_vis.ipynb  update_names_database.ipynb
.streamlit/: config.toml
databases/: SMILES_names_master_database.csv  SMILES_names_user_database.csv
modules/bulk_smiles_reactions/: helpers.py  reaction_engine.py
modules/bulk_smiles_reactions/backend_cpp/: CMakeLists.txt  reaction_engine.cpp  reaction_engine.hpp
modules/bulk_smiles_reactions/bulk_rxn_backend_jl/: Manifest.toml  reaction_engine.jl
pages/: idSMILES.py  imgSMILES.py  rxnSMILES.py
unjoined_databases/: All_reactant_Name_smiles.csv  BSH Specificity Calculations 2 - SMILES and Formulas.csv  Dorrestein Lab - Chemical Inventory - All(outdated).csv  Dorrestein Lab - Chemical Inventory - Amines&Other.csv  Dorrestein Lab - Chemical Inventory - BAs.csv  Dorrestein Lab - Chemical Inventory - MW.csv  Dorrestein Lab - Chemical Inventory - OldBAs.csv  Dorrestein Lab - Chemical Inventory - OldFAs.csv
